--- a/index.html
+++ b/index.html
@@ -3,12 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Forlæns og Baglæns</title>
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="icon" type="image/x-icon" href="/img/Favicon.png">
+
 </head>
 <body>
     <header>
-        <h1>Welcome to My Website</h1>
+        <a href="#home"></a>
+            <img src="/img/LogoLilleSort.webp" alt="Website Logo" style="height: 50px;">
+        </a>
+        
     </header>
     <nav>
         <ul>
