--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </section>
         <section id="contact">
             <h2>Contact</h2>
-            <p>This is the contact section.</p>
+            <p>Hej mit navn er mathias</p>
         </section>
     </main>
     <footer>
