--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@
 </head>
 <body>
     <header class="header">
-        <a href="#home"></a>
-            <img src="/img/LogoLilleHvid.webp" alt="Website Logo" style="height: 50px;">
-        </a>
         <input class="menu-btn" type="checkbox" id="menu-btn" />
         <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
         <ul class="menu">
@@ -23,7 +20,12 @@
     </header>
 
     <main>
-        
+        <section class="image-container">
+            <img src="/img/Ai Billede cafe.png" alt="Front Page Image" id="forbillede">
+            <a href="#home">
+                <img src="/img/LogoLilleHvid.webp" alt="Website Logo" id="logo">
+            </a>
+        </section>
     </main>
     <footer>
         
