Forside og Logo fix

--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
             <img src="/img/Ai Billede cafe.png" alt="Front Page Image" id="forbillede">
             <a href="#home">
                 <img src="/img/LogoLilleHvid.webp" alt="Website Logo" id="logo">
+                <div class="overlay">
+                    <h1 class="welcome-text">Velkommen til</h1>
+                    <img src="/img/LogoStorHvidBred.webp" alt="Website Logo" id="mainlogo">
+                    <p class="subtext">Tapas & cocktails</p>
+                    <div class="buttons">
+                        <a href="#" class="button">Menukort</a>
+                        <a href="#" class="button">Book bord</a>
+                    </div>
+                </div>
             </a>
         </section>
     </main>
