Forside og Hover effekter.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <main>
         <section class="image-container">
-            <img src="/img/Ai Billede cafe.png" alt="Front Page Image" id="forbillede">
+            <img src="/img/Forbillede.webp" alt="Front Page Image" id="forbillede">
             <a href="#home">
                 <img src="/img/LogoLilleHvid.webp" alt="Website Logo" id="logo">
                 <div class="overlay">
