--- a/Bookbord.html
+++ b/Bookbord.html
@@ -32,6 +32,103 @@
         </a>
     </section>
 
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+
+
+    <main class="content">
+        <div class="form-box">
+            
+            <section class="form-page active" id="form-step-1">
+                <h3 class="form-heading">Book Bord</h3>
+                <label class="form-label" for="form-guests">Antal Gæster:</label>
+                <select class="form-select" id="form-guests" name="form-guests">
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                    <option value="6">6</option>
+                </select>
+
+                <label class="form-label" for="form-date">Dato:</label>
+                <input class="form-input" type="date" id="form-date" name="form-date" min="2024-01-01">
+
+                <label class="form-label" for="form-time">Tidspunkt:</label>
+                <select class="form-select" id="form-time" name="form-time">
+                    <option value="14:00">14:00</option>
+                    <option value="14:30">14:30</option>
+                    <option value="15:00">15:00</option>
+                    <option value="15:30">15:30</option>
+                    <option value="16:00">16:00</option>
+                    <option value="16:30">16:30</option>
+                    <option value="17:00">17:00</option>
+                    <option value="17:30">17:30</option>
+                    <option value="18:00">18:00</option>
+                    <option value="18:30">18:30</option>
+                    <option value="19:00">19:00</option>
+                    <option value="19:30">19:30</option>
+                    <option value="20:00">20:00</option>
+                    <option value="20:30">20:30</option>
+                    <option value="21:00">21:00</option>
+                    <option value="21:30">21:30</option>
+                </select>
+
+                <button type="button" class="form-next-btn">Næste</button>
+            </section>
+
+            <!-- Step 2: Enter Personal Info -->
+            <section class="form-page" id="form-step-2">
+                <h3 class="form-heading">Dine Detaljer</h3>
+                <p>Sted:</p>
+                <p>Forlæns og Baglæns</p>
+                <p>Jægergårdsgade 23, 8000 Aarhus C</p>
+                <br>
+                <p id="guest-info"></p>
+                <p id="date-info">Date: </p>
+                <p id="time-info">Time: </p>
+                <br>
+                <br>
+                <label class="form-label" for="form-name">Navn:</label>
+                <input class="form-input" type="text" id="form-name" name="form-name" required>
+
+                <label class="form-label" for="form-phone">Telefonnummber:</label>
+                <input class="form-input" type="tel" id="form-phone" name="form-phone" required>
+
+                <label class="form-label" for="form-email">Emailadresse:</label>
+                <input class="form-input" type="email" id="form-email" name="form-email" required>
+
+                <label class="form-label" for="form-comments">Eventuelle kommentare (valgfrit):</label>
+                <textarea class="form-textarea" id="form-comments" name="form-comments"></textarea>
+                <br>
+                <br>
+
+                <div class="form-checkbox-container">
+                    <label class="form-checkbox-label">
+                        <input class="form-checkbox" type="checkbox" id="form-terms" required>Jeg er indforstået med at bookingen kan afbestilles op til 2 timer inden reservationen
+                    </label>
+                    <label class="form-checkbox-label">
+                        <input class="form-checkbox" type="checkbox" id="form-newsletter"> Jeg er indforstået med, at bookingen varer i 2 timer
+                    </label>
+                </div>
+                
+                <br>
+
+                <div class="form-button-group">
+                    <button type="button" class="form-prev-btn">Return</button>
+                    <button type="submit" class="form-confirm-btn" disabled>Confirm</button>
+                </div>
+            </section>
+        </div>
+    </main>
+
+    <script src="script.js"></script>
   
 
  <br>
