Stylizing af Formular

--- a/Bookbord.html
+++ b/Bookbord.html
@@ -79,19 +79,19 @@
                     <option value="21:00">21:00</option>
                     <option value="21:30">21:30</option>
                 </select>
-
+                <br> 
+                <br>           
                 <button type="button" class="form-next-btn">Næste</button>
             </section>
 
             <!-- Step 2: Enter Personal Info -->
             <section class="form-page" id="form-step-2">
                 <h3 class="form-heading">Dine Detaljer</h3>
-                <p>Sted:</p>
                 <p>Forlæns og Baglæns</p>
                 <p>Jægergårdsgade 23, 8000 Aarhus C</p>
                 <br>
                 <p id="guest-info"></p>
-                <p id="date-info">Date: </p>
+                <p id="date-info">Dato: </p>
                 <p id="time-info">Time: </p>
                 <br>
                 <br>
@@ -121,8 +121,8 @@
                 <br>
 
                 <div class="form-button-group">
-                    <button type="button" class="form-prev-btn">Return</button>
-                    <button type="submit" class="form-confirm-btn" disabled>Confirm</button>
+                    <button type="button" class="form-prev-btn">Tilbage</button>
+                    <button type="submit" class="form-confirm-btn" disabled>Bekræft</button>
                 </div>
             </section>
         </div>
