--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                     <img src="/img/LogoStorHvidBred.webp" alt="Website Logo" id="mainlogo">
                     <p class="subtext">Tapas & cocktails</p>
                         <div class="buttons">
-                           <a href="#" class="button">Menukort</a>
-                           <a href="#" class="button">Book bord</a>
+                           <a href="/menukort.html" class="button">Menukort</a>
+                           <a href="/Bookbord.html" class="button">Book bord</a>
                     </div>
                 </div>
         </section>
