--- a/Bookbord.html
+++ b/Bookbord.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="da">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,7 +21,7 @@
             <ul class="menu">
                 <li><a href="/menukort.html">Menukort</a></li>
                 <li><a href="/Bookbord.html">Book bord</a></li>
-                <li><a href="#omos">Om os</a></li>
+                <li><a href="/omos.html">Om os</a></li>
               </ul>
         </header>
     </nav>
