--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="da">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,7 +19,7 @@
         <ul class="menu">
             <li><a href="/menukort.html">Menukort</a></li>
             <li><a href="/Bookbord.html">Book bord</a></li>
-            <li><a href="#omos">Om os</a></li>
+            <li><a href="/omos.html">Om os</a></li>
           </ul>
     </header>
 </nav>
@@ -68,11 +68,12 @@
             
 
             <section class="section-reviews">
-                <div class="image-article">
+                <div class="image-article2">
                     <img src="/img/Shopfront.png" alt="Front of Forlæns & Baglæns restaurant">
                 </div>
                 <div class="content">
                     <h2>Hvad siger vores gæster om os?</h2>
+                    <br>
                     <blockquote>
                         "Med fokus på smag og nærvær leverer Forlæns og Baglæns en spiseoplevelse, der både tilfredsstiller sanserne og inviterer til hygge og fællesskab." - Erik S.
                     </blockquote>
