Sort navigations bar.

--- a/Bookbord.html
+++ b/Bookbord.html
@@ -15,16 +15,17 @@
 
 <body>
     <nav>
-        <header class="header">
-            <input class="menu-btn" type="checkbox" id="menu-btn" />
-            <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
-            <ul class="menu">
-                <li><a href="/menukort.html">Menukort</a></li>
-                <li><a href="/Bookbord.html">Book bord</a></li>
-                <li><a href="/omos.html">Om os</a></li>
-              </ul>
+        <header class="header-black">
+            <input class="menu-btn-black" type="checkbox" id="menu-btn-black" />
+            <label class="menu-icon-black" for="menu-btn-black"><span class="navicon-black"></span></label>
+            <ul class="menu-black">
+                <li><a href="/menukort.html" class="nav-link-black">Menukort</a></li>
+                <li><a href="/Bookbord.html" class="nav-link-black">Book bord</a></li>
+                <li><a href="/omos.html" class="nav-link-black">Om os</a></li>
+            </ul>
         </header>
     </nav>
+</body>
 
     <section class="image-containermenu">
         <a href="/index.html">
