Rettelse af fejl

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 </head>
 <body>
+    <nav>
     <main>
     <header class="header">
         <input class="menu-btn" type="checkbox" id="menu-btn" />
@@ -74,9 +75,11 @@
                 <div class="content">
                     <h2>Hvad siger vores gæster om os?</h2>
                     <br>
+                    <br>
                     <blockquote>
                         "Med fokus på smag og nærvær leverer Forlæns og Baglæns en spiseoplevelse, der både tilfredsstiller sanserne og inviterer til hygge og fællesskab." - Erik S.
                     </blockquote>
+                    <br>
                     <br>
                     <blockquote>
                         "Forlæns og Baglæns er et sted, hvor hver ret emmer af kærlighed til godt håndværk og skaber en uformel atmosfære, der får dig til at føle dig hjemme." - Maria L.
