--- a/omos.html
+++ b/omos.html
@@ -14,8 +14,8 @@
 </head>
 
 <body>
-    <nav>
         <header class="header">
+            <nav>
             <input class="menu-btn" type="checkbox" id="menu-btn" />
             <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
             <ul class="menu">
@@ -23,13 +23,28 @@
                 <li><a href="/Bookbord.html">Book bord</a></li>
                 <li><a href="/omos.html">Om os</a></li>
               </ul>
+            </nav>
         </header>
-    </nav>
+
 
     <section class="image-containermenu">
         <a href="/index.html">
             <img src="/img/LogoLilleSort.webp" alt="Website Logo" id="logomenu"> 
         </a>
+    </section>
+
+    <section class="section-om-os">
+        <div class="omos-content">
+            <h2>Smag & Samvær</h2>
+            <p>Vi tror på at mad skal smage godt, laves fra bunden og nydes i god atmosfære.</p>
+            <p>Vi er et lille sted med høje idealer.</p>
+            <p>Her sidder man tæt, deler maden og nyder smagen.</p>
+            <p>Vi laver maden fra bunden og skaber smag til deling.</p>
+            <p>Håndværk, smag, atmosfære og samvær er vores vigtigste ingredienser.</p>
+        </div>
+        <div class="image-article">
+            <img src="/img/omos.jpeg" alt="om os billede">
+        </div>
     </section>
 
     <br>
