Linje i menu, insta på om os.

--- a/Bookbord.html
+++ b/Bookbord.html
@@ -20,7 +20,7 @@
             <label class="menu-icon-black" for="menu-btn-black"><span class="navicon-black"></span></label>
             <ul class="menu-black">
                 <li><a href="/menukort.html" class="nav-link-black">Menukort</a></li>
-                <li><a href="/Bookbord.html" class="nav-link-black">Book bord</a></li>
+                <li><a href="/Bookbord.html" class="nav-link-black red">Book bord</a></li>
                 <li><a href="/omos.html" class="nav-link-black">Om os</a></li>
             </ul>
         </header>
@@ -144,7 +144,7 @@
     <footer>
         <div class="footer-content">
             <div class="footer-info">
-                <p><strong>Forlæns & Baglæns</strong> – Smag, samvær og kvalitet fra bunden. Besøg os i hjertet af byen og del oplevelsen.</p>
+                <p><strong>Forlæns & Baglæns</strong></p>
                 <p><strong>Jægergårdsgade 23, 8000 Aarhus C</strong></p>
                 <p><strong>Åbningstider:</strong> Man-Søn 10-22</p>
                 <p><strong>Kontakt os:</strong><br>
