--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="decsription" content="FORLÆNS OG BAGLÆNS er en tapasrestaurant,
+    der serverer spanskinspireret gourmetmad i uformelle omgivelser, et sted hvor gæster og personale er tæt på hinanden.
+    Cocktails, kaffe, tapas og mere, besøg os på Aarhus hjerte!">
     <title>Forlæns og Baglæns</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" type="image/x-icon" href="/img/Favicon.png">
@@ -99,7 +102,7 @@
     <footer>
         <div class="footer-content">
             <div class="footer-info">
-                <p><strong>Forlæns & Baglæns</strong> – Smag, samvær og kvalitet fra bunden. Besøg os i hjertet af byen og del oplevelsen.</p>
+                <p><strong>Forlæns & Baglæns</strong></p>
                 <p><strong>Jægergårdsgade 23, 8000 Aarhus C</strong></p>
                 <p><strong>Åbningstider:</strong> Man-Søn 10-22</p>
                 <p><strong>Kontakt os:</strong><br>
