--- a/menukort.html
+++ b/menukort.html
@@ -12,14 +12,14 @@
 </head>
 <body>
     <nav>
-        <header class="header">
-            <input class="menu-btn" type="checkbox" id="menu-btn" />
-            <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
-            <ul class="menu">
-                <li><a href="/menukort.html">Menukort</a></li>
-                <li><a href="/Bookbord.html">Book bord</a></li>
-                <li><a href="/omos.html">Om os</a></li>
-              </ul>
+        <header class="header-black">
+            <input class="menu-btn-black" type="checkbox" id="menu-btn-black" />
+            <label class="menu-icon-black" for="menu-btn-black"><span class="navicon-black"></span></label>
+            <ul class="menu-black">
+                <li><a href="/menukort.html" class="nav-link-black red">Menukort</a></li>
+                <li><a href="/Bookbord.html" class="nav-link-black">Book bord</a></li>
+                <li><a href="/omos.html" class="nav-link-black">Om os</a></li>
+            </ul>
         </header>
     </nav>
 
@@ -33,6 +33,12 @@
     <div class="menu-title-container">
         <h1 class="menu-title">Menukort</h1>
     </div>
+
+    <br>
+    <br>
+    <br>
+
+    <div class="line"></div>
     
     <br>
     <div class="menu-row">
@@ -154,10 +160,14 @@
         </div>
     </main>
 
+    <br>
+    <br>
+    <br>
+
     <footer>
         <div class="footer-content">
             <div class="footer-info">
-                <p><strong>Forlæns & Baglæns</strong> – Smag, samvær og kvalitet fra bunden. Besøg os i hjertet af byen og del oplevelsen.</p>
+                <p><strong>Forlæns & Baglæns</strong></p>
                 <p><strong>Jægergårdsgade 23, 8000 Aarhus C</strong></p>
                 <p><strong>Åbningstider:</strong> Man-Søn 10-22</p>
                 <p><strong>Kontakt os:</strong><br>
