Fix af forside header

--- a/index.html
+++ b/index.html
@@ -16,17 +16,16 @@
 </head>
 <body>
     <nav>
-    <main>
-    <header class="header">
-        <input class="menu-btn" type="checkbox" id="menu-btn" />
-        <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
-        <ul class="menu">
-            <li><a href="/menukort.html">Menukort</a></li>
-            <li><a href="/Bookbord.html">Book bord</a></li>
-            <li><a href="/omos.html">Om os</a></li>
-          </ul>
-    </header>
-</nav>
+        <header class="header-white">
+            <input class="menu-btn-white" type="checkbox" id="menu-btn-white" />
+            <label class="menu-icon-white" for="menu-btn-white"><span class="navicon-white"></span></label>
+            <ul class="menu-white">
+                <li><a href="/menukort.html" class="nav-link-white">Menukort</a></li>
+                <li><a href="/Bookbord.html" class="nav-link-white">Book bord</a></li>
+                <li><a href="/omos.html" class="nav-link-white">Om os</a></li>
+            </ul>
+        </header>
+    </nav>
 
         <section class="image-container">
             <img src="/img/Forbillede.webp" alt="Front Page Image" id="forbillede">
