--- a/menukort.html
+++ b/menukort.html
@@ -23,11 +23,11 @@
         </header>
     </nav>
 
-    <section class="image-containermenu">
+    <div class="image-containermenu">
         <a href="/index.html">
             <img src="/img/LogoLilleSort.webp" alt="Website Logo" id="logomenu"> 
         </a>
-    </section>
+    </div>
 
 
     <div class="menu-title-container">
