--- a/Bookbord.html
+++ b/Bookbord.html
@@ -9,8 +9,6 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet'>
-
-
 </head>
 
 <body>
@@ -25,13 +23,12 @@
             </ul>
         </header>
     </nav>
-</body>
 
-    <section class="image-containermenu">
+    <div class="image-containermenu">
         <a href="/index.html">
             <img src="/img/LogoLilleSort.webp" alt="Website Logo" id="logomenu"> 
         </a>
-    </section>
+    </div>
 
     <br>
     <br>
@@ -41,7 +38,6 @@
     <br>
     <br>
     <br>
-
 
     <main class="content">
         <div class="form-box">
@@ -175,3 +171,4 @@
 
     <script src="script.js"></script>
 </body>
+</html>
